# AgroNexus

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline.py  baseline_results.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  strip_status.py  test_api.py  test_e2e.js  test_verify.py  validate.py  validate_final.py  validate_step2.py  validate_step3.py  validate_step5.py  validate_step7.py
api/: main.py  routes.py
env/: __init__.py  environment.py  farm.py  graders.py  grid.py  market.py  weather.py
server/: __init__.py  app.py
tasks/: task_easy.json  task_hard.json  task_medium.json
ui/: control.html  demo.html  index.html
