[project]
name = "agronexus"
version = "1.0.0"
description = "Precision Agriculture OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "aiofiles==23.2.1",
]

[project.scripts]
server = "server.app:main"
agronexus = "server.app:main"

[project.optional-dependencies]
openenv = ["openenv-core>=0.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["env", "api", "server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
